--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -231,8 +231,10 @@ SoundCueCookQualityIndex=-1
 +TargetedRHIs=SF_VULKAN_SM6
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=EHardwareClass::Mobile
-DefaultGraphicsPerformance=EGraphicsPreset::Scalable
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TopDown",NewGameName="/Script/NinjaShadowSprint55")
