--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/NinjaShadowSprint55.NinjaShadowSprint55GameMode
+GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_GameModeBase.BP_GameModeBase_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
