added new config ini

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -260,3 +260,11 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+MinSDKVersion=31
+TargetSDKVersion=36
+bEnableBundle=True
+bDisableVerifyOBBOnStartUp=True
+Orientation=Landscape
+bSupportAdMob=False
+
