added ios build info

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -268,3 +268,13 @@ bDisableVerifyOBBOnStartUp=True
 Orientation=Landscape
 bSupportAdMob=False
 
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+AdditionalPlistData=<key>NSCameraUsageDescription</key><string>This is not used.  Unreal has camera code in the engine so we cannot remove it.</string>
+BundleDisplayName=Ninja Sprint
+BundleName=NinjaSprint
+
+[/Script/MacTargetPlatform.XcodeProjectSettings]
+CodeSigningTeam=Q38MH55M2Y
+CodeSigningPrefix=com.AnubisCalls
+BundleIdentifier=com.AnubisCalls.NinjaSprint
+
