--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Game/TopDown/Blueprints/BP_NinjaGameMode.BP_NinjaGameMode_C
+GameInstanceClass=/Game/TopDown/Blueprints/BP_NinjaGameInstance.BP_NinjaGameInstance_C
 GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_GameModeBase.BP_GameModeBase_C
