--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,6 @@ ProjectName=Top Down Game Template
 [/Script/NinjaShadowSprint55.NinjaShadowSprint55Character]
 FixedCameraPitch=-45.0
 FixedCameraDistance=1500.0
+
+[Staging]
++AllowedConfigFiles=NinjaShadowSprint55/Config/Game.ini
