added home screen

--- a/NinjaShadowSprint55.uproject
+++ b/NinjaShadowSprint55.uproject
@@ -17,6 +17,11 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "AdsPro",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/003c2267b99c461d833b3664ee5552ee"
 		}
 	]
 }
