ADDED ENEMY TO KOREA MAP

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -278,3 +278,6 @@ CodeSigningTeam=Q38MH55M2Y
 CodeSigningPrefix=com.AnubisCalls
 BundleIdentifier=com.AnubisCalls.NinjaSprint
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
