--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/TopDown/Blueprints/BP_NinjaGameInstance.BP_NinjaGameInstance_C
 GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_GameModeBase.BP_GameModeBase_C
+GlobalDefaultGameMode=/Game/TopDown/UI/Blueprints/MainMenu/GMB_MainMenu.GMB_MainMenu_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
